5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4151/executions/1758_1576.log
== TEST (2019-05-23 11:28:02) 
-- CODE:
from numpy import*
ve=array(eval(input("vetor: ")))
vb=array(eval(input("vertor: ")))
i=0
somave=0
somab=0
somae=0

print(size(ve))

while(i<size(ve)):
	if(ve[i]==11 and vb[i]==33 or ve[i]==22 and vb[i]==11 or ve[i]==33 and vb[i]==22):
		somave=somave+1
		
	elif(vb[i]==11 and ve[i]==33 or vb[i]==22 and ve[i]==11 or vb[i]=33 and ve[i]=22):
		somab=somab+1
i=i+1

(somave>somab):
print("EUSÁPIA")
(somave<somab):
print("BARSANULFO")
(somave==somab):
print("EMPATE")
		
		
		
	
	

-- ERROR:
File "XXXX", line 15
    elif(vb[i]==11 and ve[i]==33 or vb[i]==22 and ve[i]==11 or vb[i]=33 and ve[i]=22):
                                                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:28:56) 
-- CODE:
from numpy import*
ve=array(eval(input("vetor: ")))
vb=array(eval(input("vertor: ")))
i=0
somave=0
somab=0
somae=0

print(size(ve))

while(i<size(ve)):
	if(ve[i]==11 and vb[i]==33 or ve[i]==22 and vb[i]==11 or ve[i]==33 and vb[i]==22):
		somave=somave+1
		
	elif(vb[i]==11 and ve[i]==33 or vb[i]==22 and ve[i]==11 or vb[i]==33 and ve[i]==22):
		somab=somab+1
i=i+1

(somave>somab):
print("EUSÁPIA")
(somave<somab):
print("BARSANULFO")
(somave==somab):
print("EMPATE")
		
		
		
	
	

-- ERROR:
File "XXXX", line 19
    (somave>somab):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:29:56) 
-- CODE:
from numpy import*
ve=array(eval(input("vetor: ")))
vb=array(eval(input("vertor: ")))
i=0
somave=0
somab=0
somae=0

print(size(ve))

while(i<size(ve)):
	if(ve[i]==11 and vb[i]==33 or ve[i]==22 and vb[i]==11 or ve[i]==33 and vb[i]==22):
		somave=somave+1
		
	elif(vb[i]==11 and ve[i]==33 or vb[i]==22 and ve[i]==11 or vb[i]==33 and ve[i]==22):
		somab=somab+1
i=i+1

if(somave>somab):
print("EUSÁPIA")
elif(somave<somab):
print("BARSANULFO")
else:
print("EMPATE")
		
		
		
	
	

-- EXECUTION TIME:
0.178417
-- ERROR:
  File "/home/codebench/codes/1758/1576/main.py", line 20
    print("EUS\xc1PIA")
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:31:30) 
-- CODE:
from numpy import*
ve=array(eval(input("vetor: ")))
vb=array(eval(input("vertor: ")))
i=0
somave=0
somab=0
somae=0

print(size(ve))

while(i<size(ve)):
	if(ve[i]==11 and vb[i]==33 or ve[i]==22 and vb[i]==11 or ve[i]==33 and vb[i]==22):
		somave=somave+1
		
	elif(vb[i]==11 and ve[i]==33 or vb[i]==22 and ve[i]==11 or vb[i]==33 and ve[i]==22):
		somab=somab+1
	i=i+1

if(somave>somab):
	print("EUSAPIA")
elif(somave<somab):
	print("BARSANULFO")
else:
	print("EMPATE")
		
		
		
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:31:35) 
-- CODE:
from numpy import*
ve=array(eval(input("vetor: ")))
vb=array(eval(input("vertor: ")))
i=0
somave=0
somab=0
somae=0

print(size(ve))

while(i<size(ve)):
	if(ve[i]==11 and vb[i]==33 or ve[i]==22 and vb[i]==11 or ve[i]==33 and vb[i]==22):
		somave=somave+1
		
	elif(vb[i]==11 and ve[i]==33 or vb[i]==22 and ve[i]==11 or vb[i]==33 and ve[i]==22):
		somab=somab+1
	i=i+1

if(somave>somab):
	print("EUSAPIA")
elif(somave<somab):
	print("BARSANULFO")
else:
	print("EMPATE")
		
		
		
	
	

-- EXECUTION TIME:
1.09737
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:37:02) 
-- CODE:
from numpy import*
ve=array(eval(input("vetor: ")))
vb=array(eval(input("vertor: ")))
i=0
somave=0
somab=0
somae=0

print(size(ve))

while(i<size(ve)):
	if(ve[i]==11 and vb[i]==33 or ve[i]==22 and vb[i]==11 or ve[i]==33 and vb[i]==22):
		somave=somave+1
		
	elif(vb[i]==11 and ve[i]==33 or vb[i]==22 and ve[i]==11 or vb[i]==33 and ve[i]==22):
		somab=somab+1
i=i+1

if(somave>somab):
	print("EUSAPIA")
elif(somave<somab):
	print("BARSANULFO")
else:
	print("EMPATE")
		
		
		
	
	

-- EXECUTION TIME:
396.232
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:49:33) 
-- CODE:
from numpy import*
ve=array(eval(input("vetor: ")))
vb=array(eval(input("vertor: ")))
i=0
somave=0
somab=0
somae=0

print(size(ve))

while(i<size(ve)):
	if(ve[i]==11 and vb[i]==33 or ve[i]==22 and vb[i]==11 or ve[i]==33 and vb[i]==22):
		somave=somave+1
		
	elif(vb[i]==11 and ve[i]==33 or vb[i]==22 and ve[i]==11 or vb[i]==33 and ve[i]==22):
		somab=somab+1
	i=i+1

if(somave>somab):
	print("EUSAPIA")
elif(somave<somab):
	print("BARSANULFO")
else:
	print("EMPATE")
		
		
		
	
	

-- EXECUTION TIME:
0.444766
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
